--- a/scss/global/_boilerplate.scss
+++ b/scss/global/_boilerplate.scss
@@ -10,11 +10,16 @@
 }
 
 body {
+	position: relative;
 	font-size: 16px;
 	min-height: 100vh;
 	width: 100vw;
 	scroll-behavior: smooth;
 	overflow-x: hidden;
+}
+
+html {
+	height: 100vh;
 }
 
 img {
